--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
           <span>6 Corsi (4 subito + 2 in arrivo)</span>
         </div>
         <div class="bundle-meta-item">
-          <span>&#9854;</span>
+          <span>♾️</span>
           <span><strong style="color: var(--text);">Accesso a Vita</strong> &mdash; guarda e riguarda quando vuoi, per sempre</span>
         </div>
       </div>
@@ -1160,15 +1160,10 @@
     24040 Ciserano (BG)
   </div>
   <div class="f-contact">
-    <span style="color: var(--primary-light);">info@danielsportelli.it</span>
+    <span style="color: var(--primary-light);"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="93fafdf5fcd3f7f2fdfaf6ffe0e3fce1e7f6fffffabdfae7">[email&#160;protected]</a></span>
   </div>
   <p class="f-disclaimer">
     Questo sito non fa parte dei siti web di Facebook, Meta Inc., Google LLC o TikTok.<br>
     Inoltre, questo sito NON &egrave; approvato da Facebook, Google o TikTok in alcun modo.<br>
     Facebook &egrave; un marchio registrato di Meta Inc. Google &egrave; un marchio registrato di Google LLC.<br>
-    TikTok &egrave; un marchio registrato di ByteDance Ltd.
-  </p>
-  <div class="f-copy">&#169; 2025 Daniel Sportelli. Tutti i diritti riservati.</div>
-</footer>
-</body>
-</html>
+    TikTok &egrave; un marchio registrato di ByteDa
